static/css/styles.css
html {
    height: 100%;
    overflow: hidden;
}

body {
    font-family: Tahoma, sans-serif;
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* ---------------------------------------------------------------- */
/* Navigation Bar Styling */
.navbar {
    position: fixed;
    display: flex;
    justify-content: space-between;
    align-items: center;

    height: 40px;
    padding: 10px 20px;
    top: 0;
    width: 100%;
    box-shadow: 0 0 20px rgba(0,0,0,1);

    background-color: black;
    color: #fff;
    font-weight: bold;
    font-size: small;
    text-decoration: none;
}
.navbar .logo {
    display: flex;
    align-items: center;
}
.navbar .logo .logo-img {
    height: 50px;
    width: auto;
    margin-right: 0;
    margin-left: -10px;
}
.navbar .logo h2 {
    color: white;
    margin: 0;
}
.hamburger {
    display: none;
    font-size: 30px;
    color: white;
    background: none;
    border: none;
    cursor: pointer;
    transition: color 0.3s;
    margin-right: 10px;
}
.nav-container {
    display: flex;
    align-items: center;
    margin-right: 20px;
}
.nav-links, .auth-links {
    display: flex;
    list-style-type: none;
}
.nav-links li {
    margin-right: 3.5rem;
}
.nav-links li a , .auth-links li a {
    color: white;
    text-decoration: none;
}
.auth-links li {
    margin-right: 2rem;
    background-color: #2b7aff;
    color: #fff;
    padding: 0.5rem 2rem;
    border-radius: 20px;
    text-decoration: none;
}
.navbar ul li a.active {
    color: #2b7aff;
}

.auth-links li:hover {
    transform: scale(1.05);
    transition: transform 0.2s ease-in-out;
}
.auth-links li:not(:hover) {
    transform: scale(1);
    transition: transform 0.2s ease-in-out;
}

/* Navigation Bar Shrunk Styling */
@media (max-width: 960px) {
    .navbar {
        height: 40px;
        padding: 10px 20px;
    }
    .hamburger-auth-group {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }
    .hamburger {
        display: flex;
    }
    .hamburger:hover {
        transform: scale(1.1);
        transition: transform 0.2s ease-in-out;
    }
    .hamburger:not(:hover) {
        transform: scale(1);
        transition: transform 0.2s ease-in-out;
    }

    .nav-links {
        display: none;
        position: absolute;
        flex-direction: column;

        top: 78%;
        left: 0;
        width: 100%;

        background-color: black;
        box-shadow: 0 0 20px rgba(0,0,0,1);
    }
    .auth-links {
        text-decoration: none;
    }
    .auth-links li {
        padding: 0.5rem 1rem;
    }
    .nav-links li {
        text-align: left;
        display: block;
        margin: 1.5rem 0;
    }
    .nav-links.active {
        display: block;
    }
}


/* ---------------------------------------------------------------- */
/* Setting Initial Styling for Content Container */
.content {
    margin-left: 20px;
    margin-right: 20px;
    margin-top: 80px;
}
.error-message {
    color: red;
    text-align: center;
    margin-top: 10px;
}


/* ---------------------------------------------------------------- */
/* Home Page Styling */
.home-page {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
    height: 100vh;

    background-image: url('/static/images/night_sky.jpg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}
.home-container {
    padding: 40px;
    width: 500px;
}
.home-header {
    font-size: xx-large;
    font-family: Arial, sans-serif;

    text-shadow: 0 10px 4px black;
    text-decoration: none;
    text-align: center;
    color: white;
}
.home-main {
    font-size: large;
    font-family: Arial, sans-serif;

    text-shadow: 0 10px 4px black;
    text-align: center;
    color: white;
}
.home-footer {
    margin-top: 80px;
    font-size: small;
    font-family: Arial, sans-serif;
    text-align: center;
    bottom: 2%;
    color: white;
}
.map-button {
    margin-top: 80px;
    text-align: center;
    display: flex;
    justify-content: center;
}
.map-button .button {
    color: white;
    text-decoration: none;
    display: inline-block;
    padding: 1.2rem 3.4rem;
    background-color: #2b7aff;
    border-radius: 10px;
    box-shadow: 0 0 20px rgba(0,0,0,1);

    font-size: medium;
    font-family: Arial, sans-serif;
    font-weight: bold;
}
.map-button .button:hover {
    transform: scale(1.05);
    transition: transform 0.2s ease-in-out;
}
.map-button .button:not(:hover) {
    transform: scale(1);
    transition: transform 0.2s ease-in-out;
}


/* ---------------------------------------------------------------- */
/* Login Page Styling */
.login-page {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: 0;
    margin-top: 30px;
    height: 100vh;

    background-image: url('/static/images/login_bkg.jpg');
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
}
.login-container {
    background-color: white;
    border-radius: 10px;
    padding: 40px;
    box-shadow: 0 0 20px rgba(0,0,0,1);
    width: 300px;
}
.login-container .login-form h2 {
    text-align: center;
    margin-bottom: 30px;
}
.login-container .login-form .form-group {
    margin-bottom: 20px;
}
.login-container .login-form label {
    display: block;
    margin-bottom: 5px;
    color: #666;
}

.login-container .login-form input[type='text'],
.login-container .login-form input[type='password'] {
    width: 92%;
    padding: 10px;
    border: 1px solid lightgray;
    border-radius: 5px;
}
.forgot-password {
    visibility: hidden; /* Un-hide when this has been implemented */
    text-align: right;
    margin-bottom: 20px;
}
.forgot-password a {
    color: #666;
    text-decoration: none;
    font-size: 0.9em;
}
.login-button {
    width: 100%;
    padding: 10px;
    background-color: #2b7aff;
    border: none;
    border-radius: 20px;
    color: white;
    font-weight: bold;
    cursor: pointer;
}
/* ... */

